// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> Default story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[600px]"
  >
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:r0:"
        type="button"
      >
        <h2
          class="text text--title-md accordion-button__heading"
        >
          <span
            class="text text--title-md accordion-button__title"
          >
            Accordion title
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="24px"
          role="img"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        data-testid="accordion-button2"
        id="headlessui-disclosure-button-:r2:"
        type="button"
      >
        <h2
          class="text text--title-md accordion-button__heading"
        >
          <span
            class="text text--title-md accordion-button__title"
          >
            Accordion title
          </span>
        </h2>
        <span
          class="text text--tag tag tag--emphasis-high tag--status-informational"
        >
          <span
            class="tag__body"
          >
            Tag Text
          </span>
        </span>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="24px"
          role="img"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
      data-headlessui-state="open"
      data-open=""
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r5:"
        aria-expanded="true"
        class="accordion-button accordion-button--md"
        data-headlessui-state="open"
        data-open=""
        data-testid="accordion-button3"
        id="headlessui-disclosure-button-:r4:"
        type="button"
      >
        <h2
          class="text text--title-md accordion-button__heading"
        >
          <span
            class="text text--title-md accordion-button__title"
          >
            Accordion title
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon accordion-button__trailing-icon--open"
          fill="currentColor"
          height="24px"
          role="img"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        data-open=""
        data-testid="accordion-panel3"
        id="headlessui-disclosure-panel-:r5:"
      >
        <span
          class="text text--body-md"
        >
          <p
            class="text text--body-md"
          >
            Lorem ipsum dolor sit amet consectetur. Massa lacus id dictum id pharetra et semper cras. Ante aliquam nec urna amet. Ipsum viverra pharetra libero sit nam adipiscing quam erat. Ultricies lacinia malesuada ac eget convallis convallis semper purus purus.
          </p>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> HasLeadingIcon story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[600px]"
  >
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:re:"
        type="button"
      >
        <span
          class="accordion-button__leading-icon"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="24px"
            style="--icon-size: 24px;"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.023 17.2923C6.873 16.6616 7.799 16.1635 8.801 15.798C9.80283 15.4327 10.8692 15.25 12 15.25C13.1308 15.25 14.1972 15.4327 15.199 15.798C16.201 16.1635 17.127 16.6616 17.977 17.2923C18.5987 16.6089 19.0913 15.8179 19.4548 14.9192C19.8183 14.0206 20 13.0475 20 12C20 9.78333 19.2208 7.89583 17.6625 6.3375C16.1042 4.77917 14.2167 4 12 4C9.78333 4 7.89583 4.77917 6.3375 6.3375C4.77917 7.89583 4 9.78333 4 12C4 13.0475 4.18175 14.0206 4.54525 14.9192C4.90875 15.8179 5.40133 16.6089 6.023 17.2923ZM9.6905 11.8095C9.0635 11.1827 8.75 10.4128 8.75 9.5C8.75 8.58717 9.0635 7.81733 9.6905 7.1905C10.3173 6.5635 11.0872 6.25 12 6.25C12.9128 6.25 13.6827 6.5635 14.3095 7.1905C14.9365 7.81733 15.25 8.58717 15.25 9.5C15.25 10.4128 14.9365 11.1827 14.3095 11.8095C13.6827 12.4365 12.9128 12.75 12 12.75C11.0872 12.75 10.3173 12.4365 9.6905 11.8095ZM12 21.5C10.6808 21.5 9.44333 21.2519 8.2875 20.7557C7.13167 20.2596 6.12625 19.5839 5.27125 18.7288C4.41608 17.8738 3.74042 16.8683 3.24425 15.7125C2.74808 14.5567 2.5 13.3192 2.5 12C2.5 10.6808 2.74808 9.44333 3.24425 8.2875C3.74042 7.13167 4.41608 6.12625 5.27125 5.27125C6.12625 4.41608 7.13167 3.74042 8.2875 3.24425C9.44333 2.74808 10.6808 2.5 12 2.5C13.3192 2.5 14.5567 2.74808 15.7125 3.24425C16.8683 3.74042 17.8738 4.41608 18.7288 5.27125C19.5839 6.12625 20.2596 7.13167 20.7557 8.2875C21.2519 9.44333 21.5 10.6808 21.5 12C21.5 13.3192 21.2519 14.5567 20.7557 15.7125C20.2596 16.8683 19.5839 17.8738 18.7288 18.7288C17.8738 19.5839 16.8683 20.2596 15.7125 20.7557C14.5567 21.2519 13.3192 21.5 12 21.5ZM14.6105 19.5645C15.4483 19.274 16.1923 18.8679 16.8423 18.3462C16.1923 17.8436 15.458 17.4519 14.6395 17.1712C13.8208 16.8904 12.941 16.75 12 16.75C11.059 16.75 10.1776 16.8888 9.35575 17.1663C8.53392 17.4439 7.80125 17.8372 7.15775 18.3462C7.80775 18.8679 8.55167 19.274 9.3895 19.5645C10.2273 19.8548 11.0975 20 12 20C12.9025 20 13.7727 19.8548 14.6105 19.5645ZM13.248 10.748C13.5827 10.4135 13.75 9.9975 13.75 9.5C13.75 9.0025 13.5827 8.5865 13.248 8.252C12.9135 7.91733 12.4975 7.75 12 7.75C11.5025 7.75 11.0865 7.91733 10.752 8.252C10.4173 8.5865 10.25 9.0025 10.25 9.5C10.25 9.9975 10.4173 10.4135 10.752 10.748C11.0865 11.0827 11.5025 11.25 12 11.25C12.4975 11.25 12.9135 11.0827 13.248 10.748Z"
            />
          </svg>
        </span>
        <h2
          class="text text--title-md accordion-button__heading"
        >
          <span
            class="text text--title-md accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
          <span
            class="text text--body-md accordion-button__subTitle"
          >
            Quam lacus maecenas nibh malesuada.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="24px"
          role="img"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> TitleAndSubtitle story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[600px]"
  >
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:rc:"
        type="button"
      >
        <h2
          class="text text--title-md accordion-button__heading"
        >
          <span
            class="text text--title-md accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
          <span
            class="text text--body-md accordion-button__subTitle"
          >
            <span>
              "Quam lacus maecenas nibh malesuada."
            </span>
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="24px"
          role="img"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> UsingRenderProp story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[600px]"
  >
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:rg:"
        type="button"
      >
        <h2
          class="text text--title-md accordion-button__heading"
        >
          <span
            class="text text--title-md accordion-button__title"
          >
            Accordion Button 
            closed
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="24px"
          role="img"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> WithLargeHeader story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[600px]"
  >
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        id="headlessui-disclosure-button-:ri:"
        type="button"
      >
        <h2
          class="text text--title-md accordion-button__heading"
        >
          <span
            class="text text--title-md accordion-button__title"
          >
            Massa quam egestas massa. Massa quam egestas massa. Massa quam egestas massa. Massa quam egestas massa. Massa quam egestas massa.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="24px"
          role="img"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> WithLeadingNumberIcon story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[600px]"
  >
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:r6:"
        type="button"
      >
        <span
          class="accordion-button__leading-icon"
        >
          <span
            aria-label="Numero uno"
            class="text text--label-md number-icon number-icon--size-md number-icon--status-default"
            role="img"
            tabindex="-1"
          >
            1
          </span>
        </span>
        <h2
          class="text text--title-md accordion-button__heading"
        >
          <span
            class="text text--title-md accordion-button__title"
          >
            Accordion title
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="24px"
          role="img"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:r8:"
        type="button"
      >
        <span
          class="accordion-button__leading-icon"
        >
          <span
            aria-label="Numero uno"
            class="text text--label-md number-icon number-icon--size-md number-icon--status-default"
            role="img"
            tabindex="-1"
          >
            1
          </span>
        </span>
        <h2
          class="text text--title-md accordion-button__heading"
        >
          <span
            class="text text--title-md accordion-button__title"
          >
            Accordion title
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="24px"
          role="img"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:ra:"
        type="button"
      >
        <span
          class="accordion-button__leading-icon"
        >
          <span
            aria-label="Numero uno"
            class="text text--label-md number-icon number-icon--size-md number-icon--status-default"
            role="img"
            tabindex="-1"
          >
            1
          </span>
        </span>
        <h2
          class="text text--title-md accordion-button__heading"
        >
          <span
            class="text text--title-md accordion-button__title"
          >
            Accordion title
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="24px"
          role="img"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
